--- a/css/custom/extra.css
+++ b/css/custom/extra.css
@@ -106,6 +106,38 @@ font-family: "Roboto Slab", system-ui, -apple-system, BlinkMacSystemFont, 'Segoe
    font-family: "Roboto Slab", system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
    
 }
+.p-modal .modal-dialog{
+    max-width: 100vw;
+    margin: 1rem;
+    background-color: aliceblue;
+}
+
+.p-modal .modal-content h2{
+
+    font-size: 3rem;
+    line-height: 3rem;
+
+}
+
+.p-modal .modal-content .p-intro{
+
+    font-family: "Roboto Slab", system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+}
+
+.p-modal .close-modal{
+    position: absolute;
+    top: 1.5rem;
+    right: 1.5rem;
+    width: 3rem;
+    height: 3rem;
+    cursor: pointer;
+    background-color: transparent;
+}
+.p-modal .close-modal:hover{
+    opacity: 0.5;
+}
+
+
 @media(max-width:991.98px){
     header.backImage{
         padding-top: 11rem;
@@ -122,6 +154,17 @@ font-family: "Roboto Slab", system-ui, -apple-system, BlinkMacSystemFont, 'Segoe
     }
     #mainNavbar .navbar-nav .nav-item .nav-link{
         color: blueviolet;
+    
+    }
+    .p-modal .modal-content h2{
+
+        font-size: 3rem;
+        line-height: 3rem;
+    
+    }
+    .p-modal .close-modal{
+        width: 2rem;
+        height: 2rem;
     }
 }
 @media(min-width:992px){
