--- a/css/custom/extra.css
+++ b/css/custom/extra.css
@@ -51,7 +51,8 @@ font-family: "Montserrat Alternates",-apple-system, BlinkMacSystemFont, 'Segoe U
     font-size: 2.5rem;
     margin-bottom: 1rem;
     margin-top: 0;
-  
+    font-family: "Montserrat Alternates",-apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    
 }
 
 .mySection h3.s-subheading {
@@ -207,4 +208,141 @@ font-family: "Roboto Slab", system-ui, -apple-system, BlinkMacSystemFont, 'Segoe
         background-color: rgba(29, 31, 31, 0.963);
     }
     
+}
+
+/* hakkında başla */
+.timeline{
+    position: relative;
+    padding: 0;
+    list-style: none;
+}
+.timeline::before {
+    position: absolute;
+    bottom: 0;
+    top: 0;
+    width: 2px;
+    left: 40px;
+    margin-left: -1px;
+    background-color: #dadde0;
+    content: "";
+}
+.timeline>li{
+    margin-bottom: 50px;
+}
+.timeline>li::after,
+.timeline>li::before{
+    display: table;
+    content: "";
+}
+.timeline>li::after{
+    clear: both;
+}
+.timeline>li .t-panel{
+    padding:0 20px 0 100px;
+    text-align: left;
+}
+.timeline>li .t-image{
+    z-index: 10;
+    width: 80px;
+    height: 80px;
+    position: absolute;
+    text-align: center;
+    color: white;
+    border-radius: 100%;
+    border: 7px solid #dadde0;
+    -webkit-border-radius: 100%;
+    -moz-border-radius: 100%;
+    -ms-border-radius: 100%;
+    -o-border-radius: 100%;
+}
+
+.timeline>li .t-image h4{
+    font-size: 10px;
+    line-height: 16px;
+    margin-top: 12px;
+}
+.timeline .t-heading h4 {
+  margin-top: 0;
+  color: inherit;
+  font-weight: bold;
+  font-family: "Roboto Slab", system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+}
+
+.timeline .t-body>ul,
+.timeline .t-body>p {
+    margin-bottom: 0;
+}
+@media(min-width:770px){
+    .timeline::before{
+        left: 50%;
+    }
+    .timeline>li{
+        min-height: 100px;
+        margin-bottom: 100px;
+    }
+    .timeline>li .t-panel{
+        float: left;
+        width: 40%;
+        padding:0 20px 20px 30px ;
+        text-align: right;
+    }
+    .timeline>li .t-image{
+        left: 50%;
+        height: 100px;
+        width: 100px;
+        margin-left: -50px;
+    }
+    .timeline>li .t-image h4{
+        margin-top: 18px;
+        line-height: 17px;
+        font-size: 13px;
+    }
+    .timeline>li.t-inverted>.t-panel{
+        text-align: left;
+        padding:0 30px 20px 20px;
+        float: right;
+    }
+}
+@media(min-width:992px){
+    .timeline>li{
+        min-height: 150px; 
+    }
+    .timeline>li .t-panel{
+        padding:0 20px 20px;
+    }
+    .timeline>li .t-image{
+        left: 50%;
+        height: 150px;
+        width: 150px;
+        margin-left: -75px;
+    }
+    .timeline>li .t-image h4{
+        margin-top: 32px;
+        line-height: 25px;
+        font-size: 19px;
+    }
+    .timeline>li.t-inverted>.t-panel{
+        padding:0 20px 20px;
+    }
+}
+@media(min-width:1200px){
+    .timeline>li{
+        min-height: 170px; 
+    }
+    .timeline>li .t-panel{
+        padding:0 20px 20px 10px;
+    }
+    .timeline>li .t-image{
+        height: 180px;
+        width: 180px;
+        margin-left: -90px;
+    }
+    .timeline>li .t-image h4{
+        margin-top: 40px;
+        font-size: 23px;
+        line-height: 30px;
+    }
+    .timeline>li.t-inverted>.t-panel{
+        padding:0 100px 20px 20px;
+    }
 }
