--- a/css/custom/extra.css
+++ b/css/custom/extra.css
@@ -346,3 +346,35 @@ font-family: "Roboto Slab", system-ui, -apple-system, BlinkMacSystemFont, 'Segoe
         padding:0 100px 20px 20px;
     }
 }
+/* team başla*/
+
+.t-member{
+    margin-bottom: 3rem;
+}
+.t-member img {
+    width: 20rem;
+    height: 20rem;
+    border: 0.5rem solid rgba(0, 0,0,0.1);
+}
+.t-member h4{
+    margin-bottom: 0;
+    margin-top: 1.7rem;
+    font-family: "Montserrat Alternates",-apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+}
+.t-member p{
+    font-family: "Roboto Slab", system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+}
+.btn-social{
+    height: 2.5rem;
+    width: 2.5rem;
+    display: inline-flex;
+    justify-content: center;
+    align-items: center;
+    padding: 0;
+    border-radius: 100%;
+    -webkit-border-radius: 100%;
+    -moz-border-radius: 100%;
+    -ms-border-radius: 100%;
+    -o-border-radius: 100%;
+
+}
